--- a/index.html
+++ b/index.html
@@ -301,7 +301,7 @@
 		<section id="analyze-now">
 			<div class="container">
 				<div class="row">
-					<div class="about-left col-lg-6 my-auto">
+					<div class="analyze-left col-lg-6 my-auto">
 						<h5 class="mb-2">ANALYZE NOW</h5>
 						<h1 class="mb-3">
 							Wonder how much faster your website can go? Easily check your SEO
@@ -327,7 +327,7 @@
 							</div>
 						</div>
 					</div>
-					<div class="about-right col-lg-6 mb-5">
+					<div class="analyze-right col-lg-6 mb-5">
 						<img
 							class="img-fluid mx-auto my-auto"
 							src="img/banner-analyze.jpg"
@@ -397,12 +397,12 @@
 		<section id="join-community">
 			<div class="container">
 				<div class="row">
-					<div class="about-left col-md-8 my-auto">
+					<div class="community-left col-md-8 my-auto">
 						<h1 class="mb-5">
 							Join our community by using our services and grow your business.
 						</h1>
 					</div>
-					<div class="about-right col-md-4 mt-4">
+					<div class="community-right col-md-4 mt-4">
 						<button>Try it For Free</button>
 					</div>
 				</div>
@@ -421,7 +421,17 @@
 							<div class="col-sm-2">
 								<a
 									class="link-sosmed"
-									href="https://www.instagram.com/vokasi_itltrisakti/?hl=id"
+									href="#"
+								>
+									<p class="kontak-p">
+										<img src="img/logo-email.png" alt="" />
+									</p>
+								</a>
+							</div>
+							<div class="col-sm-2">
+								<a
+									class="link-sosmed"
+									href="#"
 								>
 									<p class="kontak-p">
 										<img src="img/logo-ig.png" alt="" />
@@ -431,30 +441,20 @@
 							<div class="col-sm-2">
 								<a
 									class="link-sosmed"
-									href="https://www.instagram.com/vokasi_itltrisakti/?hl=id"
+									href="#"
 								>
 									<p class="kontak-p">
-										<img src="img/logo-ig.png" alt="" />
+										<img src="img/logo-fb.png" alt="" />
 									</p>
 								</a>
 							</div>
 							<div class="col-sm-2">
 								<a
 									class="link-sosmed"
-									href="https://www.instagram.com/vokasi_itltrisakti/?hl=id"
+									href="#"
 								>
 									<p class="kontak-p">
-										<img src="img/logo-ig.png" alt="" />
-									</p>
-								</a>
-							</div>
-							<div class="col-sm-2">
-								<a
-									class="link-sosmed"
-									href="https://www.instagram.com/vokasi_itltrisakti/?hl=id"
-								>
-									<p class="kontak-p">
-										<img src="img/logo-ig.png" alt="" />
+										<img src="img/logo-twitter.png" alt="" />
 									</p>
 								</a>
 							</div>
